test/zinc_source/compile_errors/functions/23_ufcs_too_many_args.zn
// expected-error: got too many arguments

fn identity(x: i64) {
    return x
}

fn main() {
    value = 1
    print(value.identity(2))
}
